# raw-photo

./: .gitignore  ANDROID_DEVICE_TEST.md  GITHUB_SETUP.md  PROJECT_INFO.md  QUICK_START_ANDROID.md  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  common_types.h  native_bridge.cpp  native_bridge.h  raw_processor.cpp  raw_processor.h  raw_processor_impl.cpp
android/app/src/main/kotlin/com/raweditor/raw_photo_editor/: MainActivity.kt
lib/: main.dart
lib/app/: app.dart
lib/models/: adjustment_parameters.dart  edit_session.dart  preset.dart  raw_image.dart
lib/providers/: editor_provider.dart  file_provider.dart  settings_provider.dart
lib/screens/editor/: editor_screen.dart
lib/screens/gallery/: gallery_screen.dart
lib/screens/home/: home_screen.dart
lib/screens/settings/: settings_screen.dart
lib/services/: database_service.dart  file_service.dart  raw_processing_service.dart
lib/widgets/: raw_image_grid.dart  sort_filter_sheet.dart
